Refactor my_each method

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,7 +2,7 @@ AllCops:
   Exclude:
     - "Guardfile"
     - "Rakefile"
-
+  
   DisplayCopNames: true
 
 Layout/LineLength:
@@ -17,7 +17,8 @@ Metrics/BlockLength:
   ExcludedMethods: ['describe']
   Max: 30
 
-
+Style/For:
+  Enabled: false
 Style/Documentation:
   Enabled: false
 Style/ClassAndModuleChildren:
